@@ -1,5 +1,6 @@
 - Support for commands with same prefixes
 - Add plugin for muting the bot, affects dokuwiki, mailing lists, web news and blog RSS
+- DokuWiki: find out page maintainers and ping them
 
 * Fri Nov 25 2016 - version 0.2.0
 - Plugin OutageReport replaced by plugin MailingLists which can check multiple
